--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,20 @@
 <resources>
     <string name="app_name">ShoppingList</string>
+    <string name="action_clear_all">Clear All</string>
     <string name="action_settings">Settings</string>
+
+
+
+    <string-array name="packagetype">
+
+        <item>piece</item>
+        <item>box</item>
+        <item>palett</item>
+
+    </string-array>
+
+
+
+
+
 </resources>
